--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -8,10 +8,15 @@
   url = "#about"
   weight = 10
 
+#[[main]]
+#  name = "Posts"
+#  url = "#posts"
+#  weight = 20
+
 [[main]]
-  name = "Posts"
-  url = "#posts"
-  weight = 20
+  name = "Teaching"
+  url = "#teaching"
+  weight = 25
 
 [[main]]
   name = "Projects"
