--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -13,10 +13,10 @@
 #  url = "#posts"
 #  weight = 20
 
-[[main]]
-  name = "Teaching"
-  url = "#teaching"
-  weight = 25
+#[[main]]
+#  name = "Teaching"
+#  url = "#teaching"
+#  weight = 25
 
 [[main]]
   name = "Projects"
