--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -60,7 +60,7 @@ time_format = "3:04 PM"
 # Enter contact details (optional). To hide a field, clear it to "".
 email = "bader@njit.edu"
 phone = "973-596-2654"
-address = "4105 GITC Building, New Jersey Institute of Technology, Newark, NJ 07102"
+address = "GITC Rm 4102, New Jersey Institute of Technology, Newark, NJ 07102"
 
 # Office hours: use `<br>` to insert a line break, or set to "" to remove office hours
 # office_hours = """Monday 10:00 to 13:00<br>
@@ -94,10 +94,10 @@ address = "4105 GITC Building, New Jersey Institute of Technology, Newark, NJ 07
 #   1: Google Maps
 #   2: OpenStreetMap (Mapnik)
 #   3: OpenStreetMap (Mapbox)
-map = 0
+map = 1
 map_api_key = ""
-latitude = "37.4275"
-longitude = "-122.1697"
+latitude = "40.7444531"
+longitude = "-74.1817464"
 zoom = 15
 
 ############################
