--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -69,3 +69,11 @@ ignoreFiles = ["\\.ipynb$", ".ipynb_checkpoints$", "\\.Rmd$", "\\.Rmarkdown$", "
   category = "categories"
   publication_type = "publication_types"
   author = "authors"
+
+[frontmatter]
+  date = ["date", "publishDate", "lastmod"]
+  #lastmod = [":git", "lastmod", "date", "publishDate"]
+  lastmod = ["lastmod", "date", "publishDate", ":git"]
+  publishDate = ["publishDate", "date"]
+  expiryDate = ["expiryDate"]
+  
