Added People widget

--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -9,6 +9,11 @@
   weight = 10
 
 [[main]]
+  name = "People"
+  url = "#people"
+  weight = 15
+
+[[main]]
   name = "Posts"
   url = "#posts"
   weight = 20
