--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -121,8 +121,15 @@ plugins_js  = []
 ## Advanced options       ##
 ############################
 
-# Get user avatars from Gravatar.com? (true/false)
-gravatar = false
+# Avatars.
+# An avatar is an image that appears next to a user's name.
+# An avatar can be uploaded as an image named `avatar` to each user's profile or fetched from Gravatar.com.
+[avatar]
+  # Get user avatars from Gravatar.com? (true/false)
+  gravatar = false
+
+  # Choose a shape for avatar images. Options: circle, square.
+  shape = "circle"
 
 # Main menu alignment (l = left, c = center, r = right) and logo options.
 main_menu = {align = "l", show_logo = true}
